--- a/concepts-driven-design-with-di/index.html
+++ b/concepts-driven-design-with-di/index.html
@@ -77,6 +77,9 @@ Kris Jusiak
 * Loosely coupled code (easy to extend, maintain, reause)
 * Testable code (TDD, BDD)
     * Easy/Automatic mocking
+
+  > "If you liked it then you should have put a test on it" Beyonce rule
+
 * ...
       There is much more!
 
@@ -307,23 +310,46 @@ STL example: `std::vector`
 
 ----
 
+###Concepts/C++2X?
+
+####API
+```cpp
+template<class... Ts>
+concept bool Concept = requires(Ts..., args...) {
+    expressions...
+};
+```
+
+---
+
+####Example
+```cpp
+template <class T>
+concept bool Concept = 
+  requires(T t, std::ostream& os) {
+    { os << t } -> std::ostream&; // printable
+  } &&
+  requires(T t, int p1, double p2) {
+    { t.foo(p1, p2) } -> void // foo callable void(T::*)(int, double)
+  }
+};
+```
+
+----
+
 ###Concepts/C++2X? (V3)
 
 ```cpp
 template <class T>
-concept bool Readable() {
-  return requires(T reader) {
-    { reader.read() } -> int;
-  }
+concept bool Readable = requires(T reader) {
+  { reader.read() } -> int;
 };
 ```
 
 ```cpp
 template <class T>
-concept bool Printable() {
-  return requires(T printer) {
-    { printer.print() } -> void;
-  }
+concept bool Printable = requires(T printer) {
+  { printer.print() } -> void;
 };
 ```
 
@@ -864,7 +890,6 @@ App(Printer& printer, std::unique_ptr<Reader> reader)
 #####Manual DI - Wiring mess
 ```cpp
 int main() {
-  auto file = std::fstream{"input.txt"};      // wiring
   auto reader = std::make_unique<Reader>{};   // diff wiring!
   auto printer = Printer{std::cout};          // wiring
   auto app = App{printer, std::move(reader)}; // diff wiring!
@@ -943,7 +968,7 @@ EXPECT_CALL(readerMock, read(_)).WillOnce(Return(42));
 
 ##Concepts driven design with [[Boost].DI](https://github.com/boost-experimental/di)
 
-> Let's kill 3 birds with one stone!
+###Idea
 
 * Concepts checking (type constraints)
 * Mocking (automatic generation from concepts)
@@ -958,7 +983,7 @@ EXPECT_CALL(readerMock, read(_)).WillOnce(Return(42));
 struct Concept {
   template <class... Ts>
   auto requires(Ts... &&ts) -> REQUIRES(
-    ... // any expression on ts
+    expressions...
   );
 };
 ```
@@ -967,10 +992,10 @@ struct Concept {
 ```cpp
 struct Concept {
   template <class T>
-  auto requires(T &&t) -> REQUIRES(
-    t++,           // incrementable
-    *t,            // dereferencable
-    std::cout << t // printable
+  auto requires(T &&t, std::ostream& os) -> REQUIRES(
+    t++,        // incrementable
+    *t,         // dereferencable
+    os << t     // printable
   );
 };
 ```
@@ -986,10 +1011,10 @@ struct Readable {
   HAS_MEMBER_FUNCTION(read);
 
   template <class T>
-  auto requires(T &&t) -> REQUIRES(
-    T(t),              // copy constructible
-    std::cout << t,    // printable
-    has_read<T, int()> // read callable
+  auto requires(T &&t, std::ostream& os) -> REQUIRES(
+    T(t),               // copy constructible
+    os << t,            // printable
+    (T)has_read<int()>  // read callable
   );
 };
 ```
@@ -999,10 +1024,10 @@ struct Printable {
   HAS_MEMBER_FUNCTION(print);
 
   template <class T>
-  auto requires(T &&t) -> REQUIRES(
+  auto requires(T &&t, std::ostream& os) -> REQUIRES(
     T(t),                   // copy constructible
-    std::cout << t,         // printable
-    has_print<T, void(int)> // print callable
+    os << t,                // printable
+    (T)has_print<void(int)> // print callable
   );
 };
 ```
@@ -1012,8 +1037,8 @@ struct Printable {
 ##Concepts driven design / C++14 (V7)
 
 ```cpp
-template<class TReader = Readable    // = Concept
-       , class TPrinter = Printable> // = Concept
+template<class TReader  = Readable   // TReader  = 'Concept'
+       , class TPrinter = Printable> // TPrinter = 'Concept'
 class App {
   TReader reader;
   TPrinter printer;
@@ -1061,6 +1086,8 @@ di.hpp: note: in instantiation of template class
 
 app.cpp:: note: while substituting template 'to'
   di::bind<Readable>.to<Logger>()
+
+app.cpp: error: 'class Logger' has no member named 'read'
 ```
 
 ----
@@ -1185,16 +1212,17 @@ class LegacyImplementation final : public ILegacyInterface {
 ```cpp
 int main() {
   const auto injector = di::make_injector(
-    di::bind<Readable>.to<FileReader>(), // concept -> template class
+    di::bind<Readable>.to<FileReader>(),         // concept -> template class
     di::bind<Synchronizable>.to<Synchronizer>(), // concept -> class
-    di::bind<Loggable>.to<Logger>(), // concept -> type erasure
+    di::bind<Loggable>.to<Logger>(),             // concept -> type erasure
     di::bind<ILegacyInterface>.
-          to<LegacyImplementation>() // interface -> template class
+          to<LegacyImplementation>()             // interface -> template class
   );
 
   injector.create<App>().run();
 }
 ```
+<!-- .element: style="margin-left:-3%; width:105%" -->
 
 ----
 
@@ -1202,7 +1230,7 @@ int main() {
 
 |  |  |
 | ------- | ------------- |
-| Try it online! | http://boost-experimental.github.io/di |
+| Try it online! | http://melpon.org/wandbox/permlink/UGaFDy2jaSCeksa1 |
 
 ==============================================================================
 
@@ -1213,8 +1241,6 @@ int main() {
 ###Injection guideline
 
 ![guideline](images/guideline.png)
-
-> "If you liked it then you should have put a test on it" Beyonce rule
 
 ----
 
