--- a/boost/examples/index.html
+++ b/boost/examples/index.html
@@ -1079,7 +1079,7 @@ hljs.configure({languages:['cpp']});
 hljs.initHighlightingOnLoad();
 </script>
 
-<div class="copyright-footer">Copyright &copy; 2016
+<div class="copyright-footer">Copyright &copy; 2012-2017 Kris Jusiak (kris at jusiak net)
       <p>Distributed under the Boost Software License, Version 1.0.
       (See accompanying file <code class="filename">LICENSE_1_0.txt</code> or copy at
       <a href="http://www.boost.org/LICENSE_1_0.txt" target="_top">http://www.boost.org/LICENSE_1_0.txt</a>)
