--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ but also can help you with...</p>
   <div role="contentinfo">
     <!-- Copyright etc -->
     
-      <p>Copyright &copy; 2016</p>
+      <p>Copyright &copy; 2012-2017 Kris Jusiak (kris at jusiak net)</p>
     
   </div>
 
@@ -570,5 +570,5 @@ but also can help you with...</p>
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2017-03-26 19:09:23.912634
+Build Date UTC : 2017-03-26 19:17:39.822803
 -->
