--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -1051,7 +1051,7 @@ Please check them out and write your own!</p>
   <div role="contentinfo">
     <!-- Copyright etc -->
     
-      <p>Copyright &copy; 2016</p>
+      <p>Copyright &copy; 2012-2017 Kris Jusiak (kris at jusiak net)</p>
     
   </div>
 
