--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -295,7 +295,7 @@ auto injector = di::make_injector(
   <div role="contentinfo">
     <!-- Copyright etc -->
     
-      <p>Copyright &copy; 2016</p>
+      <p>Copyright &copy; 2012-2017 Kris Jusiak (kris at jusiak net)</p>
     
   </div>
 
