--- a/boost/index.html
+++ b/boost/index.html
@@ -31,7 +31,7 @@
 <div><div class="author"><h3 class="author">
 Kris Jusiak
 </h3></div></div>
-<div><p class="copyright">Copyright &copy; 2016</p></div>
+<div><p class="copyright">Copyright &copy; 2012-2017 Kris Jusiak (kris at jusiak net)</p></div>
 <div><div class="legalnotice">
 <a name="idm45555445986288"></a><p>Distributed under the Boost Software License, Version 1.0.
       (See accompanying file <code class="filename">LICENSE_1_0.txt</code> or copy at
@@ -392,7 +392,7 @@ hljs.configure({languages:['cpp']});
 hljs.initHighlightingOnLoad();
 </script>
 
-<div class="copyright-footer">Copyright &copy; 2016
+<div class="copyright-footer">Copyright &copy; 2012-2017 Kris Jusiak (kris at jusiak net)
       <p>Distributed under the Boost Software License, Version 1.0.
       (See accompanying file <code class="filename">LICENSE_1_0.txt</code> or copy at
       <a href="http://www.boost.org/LICENSE_1_0.txt" target="_top">http://www.boost.org/LICENSE_1_0.txt</a>)
