--- a/overview/index.html
+++ b/overview/index.html
@@ -342,7 +342,7 @@ namespace di = boost::di;
   <div role="contentinfo">
     <!-- Copyright etc -->
     
-      <p>Copyright &copy; 2016</p>
+      <p>Copyright &copy; 2012-2017 Kris Jusiak (kris at jusiak net)</p>
     
   </div>
 
