--- a/search.html
+++ b/search.html
@@ -219,7 +219,7 @@
   <div role="contentinfo">
     <!-- Copyright etc -->
     
-      <p>Copyright &copy; 2016</p>
+      <p>Copyright &copy; 2012-2017 Kris Jusiak (kris at jusiak net)</p>
     
   </div>
 
