--- a/user_guide/index.html
+++ b/user_guide/index.html
@@ -2680,7 +2680,7 @@ di::make_injector(...)
   <div role="contentinfo">
     <!-- Copyright etc -->
     
-      <p>Copyright &copy; 2016</p>
+      <p>Copyright &copy; 2012-2017 Kris Jusiak (kris at jusiak net)</p>
     
   </div>
 
