--- a/boost/tutorial/index.html
+++ b/boost/tutorial/index.html
@@ -78,12 +78,14 @@ You have to separate creation logic from business logic, which means that your c
 should be free of object creation inside other objects...</p>
 <pre><code class="cpp">class controller {
 public:
-  controller() : model_(new model{}) {}
-  ~controller() { delete model_; }
+  controller(config c) 
+    : model_(std::make_unique&lt;model&gt;(c))
+  { }
+
   void run();
 
 private:
-  model* model_;
+  std::unique_ptr&lt;model&gt; model_;
 };
 
 int main() {
@@ -456,6 +458,52 @@ int main() {
 
 <ul>
 <li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/tutorial/basic_first_steps_with_bindings.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/tutorial/basic_first_steps_with_bindings.cpp</a></li>
+</ul>
+<p>That's nice but I don't want to be using a dynamic (virtual) dispatch. What about concepts/templates?
+Good news, <code>[Boost].DI</code> can inject concepts/templates too!</p>
+<pre><code class="cpp">template &lt;class T = class Greater&gt;
+struct example { 
+  using type = T;
+};
+
+struct hello {};
+
+int main() {
+  const auto injector = di::make_injector(
+    di::bind&lt;class Greater&gt;.to&lt;hello&gt;()
+  );
+
+  auto object = injector.create&lt;example&gt;();
+  static_assert(std::is_same&lt;hello, decltype(object)::type&gt;{});
+}
+</code></pre>
+
+<p>And full example!</p>
+<pre><code class="cpp">#include &lt;boost/di.hpp&gt;
+
+namespace di = boost::di;
+
+class Greater;
+
+template &lt;class T = Greater&gt;
+struct example { 
+  using type = T;
+};
+
+struct hello {};
+
+int main() {
+  const auto injector = di::make_injector(
+    di::bind&lt;Greater&gt;().to&lt;hello&gt;()
+  );
+
+  auto object = injector.create&lt;example&gt;();
+  static_assert(std::is_same&lt;hello, decltype(object)::type&gt;{}, &quot;&quot;);
+}
+</code></pre>
+
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/tutorial/basic_first_steps_with_template_bindings.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/tutorial/basic_first_steps_with_template_bindings.cpp</a></li>
 </ul>
 <p>Great, but my code is more dynamic than that! I mean that I want to choose <code>gui_view</code> or <code>text_view</code> at runtime.
 <code>[Boost].DI</code> can handle that too!</p>
