--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -222,12 +222,14 @@ You have to separate creation logic from business logic, which means that your c
 should be free of object creation inside other objects...</p>
 <pre><code class="cpp">class controller {
 public:
-  controller() : model_(new model{}) {}
-  ~controller() { delete model_; }
+  controller(config c) 
+    : model_(std::make_unique&lt;model&gt;(c))
+  { }
+
   void run();
 
 private:
-  model* model_;
+  std::unique_ptr&lt;model&gt; model_;
 };
 
 int main() {
@@ -514,6 +516,27 @@ correctly. No runtime exceptions or runtime asserts, EVER!
 </span></p>
 <p>And full example!
 <img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/tutorial/basic_first_steps_with_bindings.cpp" /></p>
+<p>That's nice but I don't want to be using a dynamic (virtual) dispatch. What about concepts/templates?
+Good news, <code>[Boost].DI</code> can inject concepts/templates too!</p>
+<pre><code class="cpp">template &lt;class T = class Greater&gt;
+struct example { 
+  using type = T;
+};
+
+struct hello {};
+
+int main() {
+  const auto injector = di::make_injector(
+    di::bind&lt;class Greater&gt;.to&lt;hello&gt;()
+  );
+
+  auto object = injector.create&lt;example&gt;();
+  static_assert(std::is_same&lt;hello, decltype(object)::type&gt;{});
+}
+</code></pre>
+
+<p>And full example!
+<img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/tutorial/basic_first_steps_with_template_bindings.cpp" /></p>
 <p>Great, but my code is more dynamic than that! I mean that I want to choose <code>gui_view</code> or <code>text_view</code> at runtime.
 <code>[Boost].DI</code> can handle that too!</p>
 <pre><code class="cpp">auto use_gui_view = true/false;
