--- a/boost/FAQ/index.html
+++ b/boost/FAQ/index.html
@@ -88,7 +88,8 @@ Please check out <a href="../overview/index.html#nutshell">injection</a> design 
 <ul>
 <li>
 <h3 id="can-i-inject-templatesconcepts">Can I inject templates/concepts?</h3>
-Yes, concepts/templates can be injected</li>
+Yes, concepts/templates can be injected.
+:w</li>
 </ul>
 <pre><code class="cpp">template &lt;class T = class Greater&gt;
 struct example { 
